--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -22,10 +22,14 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px;
 }
 
 .btn-close {
     cursor: pointer;
+    color: #fff;
 }
 
 .show {
